--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <groupId>co.cask.hydrator</groupId>
   <artifactId>httptohdfs-action-plugin</artifactId>
   <modelVersion>4.0.0</modelVersion>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <licenses>
     <license>
