--- a/pom.xml
+++ b/pom.xml
@@ -76,10 +76,10 @@
   </repositories>
 
   <properties>
-    <cdap.version>6.1.0-SNAPSHOT</cdap.version>
+    <cdap.version>6.1.1</cdap.version>
     <hadoop.version>2.3.0</hadoop.version>
     <junit.version>4.11</junit.version>
-    <hydrator.version>2.3.0-SNAPSHOT</hydrator.version>
+    <hydrator.version>2.3.4</hydrator.version>
   </properties>
 
   <dependencies>
